# kreo-macos

./: .gitignore  README.md  pyproject.toml
.kreo-kontrol-state/: profiles.json
docs/superpowers/plans/: 2026-04-02-keychron-dashboard-ui-refresh.md  2026-04-02-kreo-bytech-configurator-foundation.md  2026-04-02-kreo-bytech-protocol-core-implementation.md  2026-04-03-kreo-dongle-detection-and-profiles.md  2026-04-03-kreo-layout-shell-and-navigation-cleanup.md  2026-04-03-kreo-lighting-global-write-implementation.md  2026-04-03-kreo-lighting-layout-and-board-actions-implementation.md  2026-04-03-kreo-modifier-capture-tool-implementation.md  2026-04-03-kreo-per-key-lighting-editor-implementation.md  2026-04-03-kreo-website-parity-implementation.md  2026-04-04-kreo-lighting-refresh-graceful-implementation.md
docs/superpowers/specs/: 2026-04-02-kreo-bytech-configurator-design.md  2026-04-02-kreo-bytech-protocol-core-and-domain-expansion-design.md  2026-04-03-kreo-lighting-global-write-design.md  2026-04-03-kreo-modifier-capture-tool-design.md  (+4 more)
frontend/: index.html  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
src/kreo_kontrol/: __init__.py  main.py
tests/: test_smoke.py
tests/api/: test_app.py  test_domain_endpoints.py  test_keyboard_assets.py  test_keymap_endpoint.py  test_lighting_apply_endpoint.py  test_macros_endpoint.py  test_per_key_lighting_endpoint.py  test_saved_profiles_endpoint.py
tests/device/: test_bytech_lighting.py  test_discovery.py  test_transport.py
tests/shell/: test_main.py
tests/tools/: test_modifier_capture.py
(+58 files in other folders)
