[project]
name = "kreo-kontrol"
version = "0.1.0"
description = "Local macOS configurator for the Kreo Swarm Bytech keyboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "hidapi>=0.14",
  "pydantic>=2.11",
  "pyobjc-framework-quartz>=12.1",
  "pyside6>=6.9",
  "uvicorn>=0.34",
]

[project.scripts]
kreo-kontrol = "kreo_kontrol.main:main"
kreo-kontrol-capture-modifiers = "kreo_kontrol.tools.modifier_capture:main"

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=8.3",
  "ruff>=0.11",
  "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kreo_kontrol"]
